Changes for w3 compilant

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <!-- Head-->
 <head>
+  <meta lang="Eng">
   <!-- Metadata -->
   <meta name="description" content="Pagina Web Personal de Nicolas Alberto Caceres Acosta">
   <meta name="keywords" content="Nicolas,Nicolás,Alberto,Cáceres,Acosta,Caceres,Pagina,Web,Personal,Logros,Que Hago, Quien Soy,Contacto">
@@ -71,7 +72,7 @@
               <h1 class="card-title">¿Quien soy?</h1>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae facilis mollitia iure non, totam, expedita provident deleniti quis, dolore odio accusantium maxime! Ut dignissimos beatae aperiam est dolores, blanditiis, explicabo!. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, perferendis facilis assumenda! Veniam ut inventore doloremque molestiae nobis, ducimus repudiandae sed ipsa! Aut eius nostrum quia praesentium magni fugit perspiciatis.</p>
               <!-- Canciones que cambian -->
-              <a id="canciones" target="_blank"></a>
+              <a id="canciones" target="_blank" href=""> </a>
               <script src="scripts/canciones.js"></script>
             </div>
           </div>
@@ -91,7 +92,7 @@
               <h1 class="card-title">¿Que Hago?</h1>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum quos ratione, quae velit non ut repellat deserunt, minus iusto aperiam nisi nostrum alias corrupti culpa quibusdam officia voluptate dolores, ullam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex iusto sapiente ipsa delectus itaque possimus iste autem dolores. Facere sit, odio harum minima explicabo sed praesentium libero soluta accusamus corrupti.</p>
               <!-- Habilidades que cambian -->
-              <h3 id="habilidades"></h3>
+              <h3 id="habilidades">Habilidades</h3>
               <script src="scripts/habilidades.js"></script>
             </div>
           </div>
@@ -226,7 +227,7 @@
                 <div class="timeline">
                   <span class="icon fa fa-mobile"></span>
                   <!-- Enlace al correo-->
-                  <a href="mailto: na.caceres@uniandes.edu.co" class="timeline-content" target="_blank">
+                  <a href="mailto:na.caceres@uniandes.edu.co" class="timeline-content" target="_blank">
                     <!-- Contenido de texto-->
                     <h3 class="title">E-mail</h3>
                     <p class="description">
