Changes for w3 compilant 2

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="es">
 <!-- Head-->
 <head>
-  <meta lang="Eng">
   <!-- Metadata -->
   <meta name="description" content="Pagina Web Personal de Nicolas Alberto Caceres Acosta">
   <meta name="keywords" content="Nicolas,Nicolás,Alberto,Cáceres,Acosta,Caceres,Pagina,Web,Personal,Logros,Que Hago, Quien Soy,Contacto">
