--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <!-- Link al css principal-->
   <link rel="stylesheet" href="styles/main.css"/>
   <!-- Link a las diferentes fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Lexend+Tera|Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
   <!-- Link para el favicon-->
   <link rel="icon" href="data/images/favicon.png">
 </head>
