--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <!-- Distribucion de linea del tiempo-->
             <div class="main-timeline10">
               <!-- Primera bandera -->
-              <div class="col-md-3 col-sm-6 timeline ubcband">
+              <div class="col-md-3 col-sm-12 col-12 timeline ubcband">
                 <div class="timeline-inner">
                   <!-- Contenido de texto -->
                   <div class="year">Jun. 2016</div>
@@ -132,7 +132,7 @@
                 </div>
               </div>
               <!-- Segunda bandera -->
-              <div class="col-md-3 col-sm-6 timeline ubcband">
+              <div class="col-md-3 col-sm-12 col-12 timeline ubcband">
                 <div class="timeline-inner">
                   <!-- Contenido de texto -->
                   <div class="year">Ago. 2016</div>
@@ -149,7 +149,7 @@
                 </div>
               </div>
               <!-- Tercera bandera -->
-              <div class="col-md-3 col-sm-6 timeline ubcband">
+              <div class="col-md-3 col-sm-12 col-12 timeline ubcband">
                 <div class="timeline-inner">
                   <!-- Contenido de texto -->
                   <div class="year">Oct. 2016</div>
@@ -166,7 +166,7 @@
                 </div>
               </div>
               <!-- Cuarta bandera -->
-              <div class="col-md-3 col-sm-6 timeline ubcband">
+              <div class="col-md-3 col-sm-12 col-12 timeline ubcband">
                 <div class="timeline-inner">
                   <!-- Contenido de texto -->
                   <div class="year">Ene. 2018</div>
