Code review index.html
Pequeños cambios, cosas pequeñas de ortografía, y es bueno usar .ico y no .png por razones de compatibilidad.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lexend+Tera&display=swap" rel="stylesheet">
   <!-- Link para el favicon-->
+  <!-- Favicon es mejor en formato .ico, es recomendable porque tiene más backward compatibility y no pierdes nada -->
   <link rel="icon" href="data/images/favicon.png">
 </head>
 <!-- Body -->
@@ -44,7 +45,7 @@
       <section id="intro">
         <div class="content">
           <!-- Tarjeta de presentacion -->
-          <div class="card mb-3 tarpresentacion ">
+          <div class="card mb-3 tarpresentacion">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <!-- Imagen para la tarjeta de presentacion -->
@@ -53,8 +54,9 @@
               <div class="col-md-8">
                 <div class="card-body contenedores">
                   <!-- Contenido de la tarjeta de presentacion -->
-                  <h1 class="card-title titulos">Bienvenidos a mi página web!</h1>
-                  <p class="card-text">Hola!</p>
+                  <!-- ¡En español los signos de exclamación se abren y se cierran! -->
+                  <h1 class="card-title titulos">¡Bienvenidos a mi página web!</h1>
+                  <p class="card-text">¡Hola!</p>
                   <p class="card-text">Acá podrán encontrar información sobre quien soy, que hago hoy en día, cuales han sido mis logros académicos mas importantes y mi información principal de contacto.</p>
                   <p class="card-text"><small class="text-muted">Ultima actualización 19 de Agosto del 2019</small></p>
                 </div>
@@ -95,7 +97,7 @@
           <!-- Contenedor principal para la seccion que hago -->
           <div class=" contenedores card col align-self-end">
             <div class="card-body">
-              <h1 class="card-title titulos">¿Que Hago?</h1>
+              <h1 class="card-title titulos">¿Qué Hago?</h1>
               <p class="card-text">Actualmente soy estudiante de doble pregrado en la Universidad de los Andes, comencé mis estudios en la Facultad de ciencias, en el departamento de matemáticas, después de ver un curso de programación, decidí empezar el doble pregrado en Ing de sistemas y computación.</p>
               <p class="card-text">Hoy en dia dedico gran parte de mi tiempo a estudiar, a desarrollar nuevas habilidades y a compartir con mis seres mas allegados, algunas de mis habilidades académicas y extracurriculares a resaltar son:
               </p>
